Fix squashing of images in mobile (#320)
<= 640px

--- a/css/index.css
+++ b/css/index.css
@@ -25,6 +25,7 @@ img {
 }
 @media screen and (max-width: 640px) {
 img {
+  height: auto;
   max-width: 100%;
   }
 }
